--- a/Ejercicio23y24/ejercicio_23.html
+++ b/Ejercicio23y24/ejercicio_23.html
@@ -13,14 +13,7 @@
       <h1>Menu</h1>
   </header>
   <article>
- <nav>
-<ul>
-<a href="#" ><li class="trans">Opción A</li></a>
- <a href="#" ><li class="trans">Opción B</li></a>
-<a href="#"  ><li class="trans">Opción C</li></a>
-<a href="#" ><li class="trans">Opción D</li></a>
-</ul>
-</nav>
+<form method="get" action=""
 
   </article>
     <footer>
